Adjusts home instructions

--- a/SearchApi/Views/Home/Index.cshtml
+++ b/SearchApi/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿<h1>Caio Augusto Takaki Uechi</h1>
 <h2>caio_uechi@hotmail.com</h2>
 <p>
-    Your application must:
+    @*Your application must:
     <ul>
         <li>Contain data seed methods to populate 200 rectangle data entries into database</li>
         <li>Each data entry (and therefore row(s)) must define rectangle coordinates and/or dimensions, upon your choice of design</li>
@@ -16,7 +16,7 @@
         <li>Implement basic authentication of the caller of API</li>
         <li>Any further design considerations assuming scaling this system and integrations with external consumers</li>
         <li>Wrap the executable(s) into Docker container</li>
-    </ul>
+    </ul>*@
 
     Important points I considered:
     <ul>
